test_scores/negative_dimers/features/Q5TCZ1.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q5TCZ1.pkl.xz